<resources>
    <string name="app_name">Khalifah\'s DeepThought Challenge</string>
    <string name="notifications">Notifications</string>
    <string name="content_description_notifications">Notifications Menu</string>
    <string name="content_description_settings">Settings Menu</string>
    <string name="settings">Settings</string>
    <string name="content_description_home">Home Menu Item</string>
    <string name="home">Home</string>
    <string name="lbl_learning_outcome">Learning Outcome</string>
    <string name="no_thought_fetched">No thoughts could be fetched — none found!</string>
</resources>