<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/app_bar_search"
        android:title="Search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="collapseActionView"/>
    <item
        android:id="@+id/home"
        android:contentDescription="@string/content_description_home"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/home"
        app:showAsAction="always" />

    <item
        android:id="@+id/settings"
        android:contentDescription="@string/content_description_settings"
        android:icon="@drawable/baseline_settings_circle_24"
        android:title="@string/settings"
        app:showAsAction="always" />

    <item
        android:id="@+id/notifications"
        android:contentDescription="@string/content_description_notifications"
        android:icon="@drawable/baseline_circle_notifications_24"
        android:title="@string/notifications"
        app:showAsAction="always" />

</menu>